Criado os metodos do EJB

--- a/aula01/ClienteEJB/nbproject/private/private.properties
+++ b/aula01/ClienteEJB/nbproject/private/private.properties
@@ -1,4 +1,4 @@
-deploy.ant.properties.file=C:\\Documents and Settings\\maycon\\Dados de aplicativos\\NetBeans\\7.4\\config\\GlassFishEE6\\Properties\\gfv3-1708957238.properties
+deploy.ant.properties.file=C:\\Documents and Settings\\Maycon\\Dados de aplicativos\\NetBeans\\8.0\\config\\GlassFishEE6\\Properties\\gfv31351044310.properties
 j2ee.appclient.tool.jvmoptions=-Djava.endorsed.dirs="C:\\Arquivos de programas\\glassfish-4.0\\glassfish\\lib\\endorsed";"C:\\Arquivos de programas\\glassfish-4.0\\glassfish\\modules\\endorsed" -javaagent:"C:\\Arquivos de programas\\glassfish-4.0\\glassfish\\lib\\gf-client.jar"=mode=acscript,arg=-configxml,arg="C:\\Arquivos de programas\\glassfish-4.0\\glassfish\\domains\\domain1\\config\\glassfish-acc.xml",client=jar=
 j2ee.appclient.tool.jvmoptions.class=-Djava.endorsed.dirs="C:\\Arquivos de programas\\glassfish-4.0\\glassfish\\lib\\endorsed";"C:\\Arquivos de programas\\glassfish-4.0\\glassfish\\modules\\endorsed" -javaagent:"C:\\Arquivos de programas\\glassfish-4.0\\glassfish\\lib\\gf-client.jar"=mode=acscript,arg=-configxml,arg="C:\\Arquivos de programas\\glassfish-4.0\\glassfish\\domains\\domain1\\config\\glassfish-acc.xml",client=class=
 j2ee.appclient.tool.mainclass=org.glassfish.appclient.client.AppClientFacade
@@ -6,8 +6,8 @@ j2ee.appclient.tool.runtime=
 j2ee.platform.is.jsr109=true
 j2ee.server.domain=C:/Arquivos de programas/glassfish-4.0/glassfish/domains/domain1
 j2ee.server.home=C:/Arquivos de programas/glassfish-4.0/glassfish
-j2ee.server.instance=[C:\\Arquivos de programas\\glassfish-4.0\\glassfish;C:\\Arquivos de programas\\glassfish-4.0\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.instance=[C:\\Arquivos de programas\\glassfish-4.0\\glassfish;C:\\Arquivos de programas\\glassfish-4.0\\glassfish\\domains\\domain1]deployer:gfv3ee6:localhost:4848
 j2ee.server.middleware=C:/Arquivos de programas/glassfish-4.0
 source.encoding=UTF-8
-user.properties.file=C:\\Documents and Settings\\maycon\\Dados de aplicativos\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Documents and Settings\\Maycon\\Dados de aplicativos\\NetBeans\\8.0\\build.properties
 wa.copy.client.jar.from=C:\\Arquivos de programas\\glassfish-4.0\\glassfish\\domains\\domain1\\generated\\xml
